Fix: Avoid input bigger than form box
When the width viewport was too small the form fields would become bigger than
the form div.

--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ fieldset {
 
 fieldset > div {
     display: flex;
-    flex: 1 1 200px;
-    min-width: 200px;
+    flex: 1 1 15vw;
+    min-width: 15vw;
     max-width: 300px;
     flex-direction: column;
 }
